[package]
name = "advancedresearch-asi_core0"
version = "0.2.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["artificial", "super", "intelligence", "core", "advancedresearch"]
description = "An agent architecture candidate core for Artificial Super Intelligence (ASI)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/asi_core0.git"
homepage = "https://github.com/advancedresearch/asi_core0"
exclude = []
edition = "2018"

[lib]
name = "asi_core0"

[dependencies]
